--- a/day06/Makefile
+++ b/day06/Makefile
@@ -1,6 +1,8 @@
+FILE ?= sample.txt
+
 run:
-	kotlinc main.kt -include-runtime -d day06.jar
-	java -jar day06.jar < input.txt
+	@kotlinc main.kt -include-runtime -d day06.jar
+	@java -jar day06.jar < $(FILE)
 
 clean:
-	rm -f day06.jar
+	@rm -f day06.jar
